--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <br><br>
     <p>+++2016+++</p>
     <a href="page/"></a>
-    <a href="page/i-am-a-hero-2016.html">I Am a Hero (720p + Sub Indo)</a>
+    <a href="page/">I Am a Hero (720p + Sub Indo)</a>
 </body>
 </html>
