--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
     <p>+++2022+++</p>
     <a href="page/"></a>
     <a href="page/minions-rise-of-gru-2022.html">Minions Rise of Gru (1080p + ENGLISH DUB + SUB INDO)</a>
-    <a href="page/minions-rise-of-gru-2022.html">Minions Rise of Gru (1080p + ENGLISH DUB + SUB INDO)</a>
     
     <br><br>
     <p>+++2016+++</p>
     <a href="page/"></a>
-    <a href="page/">I Am a Hero (720p + Sub Indo)</a>
+    <a href="page/i-am-a-hero-2016.html">I Am a Hero (720p + Sub Indo)</a>
 </body>
 </html>
