--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     <br><br>
     <p>+++2016+++</p>
     <a href="page/movies/"></a> 
-    <a href="page/movies/">I Am a Hero (720p + Sub Indo)</a>
+    <a href="page/movies/i-am-a-hero-2016.html">I Am a Hero (720p + Sub Indo)</a>
 </body>
 </html>
