--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <!---->
-    <h1> <a href="page/aboutme.html">just click and enjoy!</a> </h1>
+    <h1> <a href="page/movies/aboutme.html">just click and enjoy!</a> </h1>
     <h3>want to search something? just use CTRL+F or whatever</h3>
     <p>(hint: the most recent movie is place on the top)</p>
     <p>___________________________________________________________</p>
     <p>+++2022+++</p>
-    <a href="page/"></a>
-    <a href="page/minions-rise-of-gru-2022.html">Minions Rise of Gru (1080p + ENGLISH DUB + SUB INDO)</a>
+    <a href="page/movies/"></a>
+    <a href="page/movies/minions-rise-of-gru-2022.html">Minions Rise of Gru (1080p + ENGLISH DUB + SUB INDO)</a>
     
     <br><br>
     <p>+++2016+++</p>
-    <a href="page/"></a>
-    <a href="page/i-am-a-hero-2016.html">I Am a Hero (720p + Sub Indo)</a>
+    <a href="page/movies/"></a>
+    <a href="page/movies/">I Am a Hero (720p + Sub Indo)</a>
 </body>
 </html>
