--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!---->
-    <h1> <a href="page/movies/aboutme.html">just click and enjoy!</a> </h1>
+    <h1> <a href="aboutme.html">just click and enjoy!</a> </h1>
     <h3>want to search something? just use CTRL+F or whatever</h3>
     <p>(hint: the most recent movie is place on the top)</p>
     <p>___________________________________________________________</p>
