--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!---->
     <h1> <a href="aboutme.html">just click and enjoy!</a> </h1>
     <h3>want to search something? just use CTRL+F or whatever</h3>
-    <p>(hint: the most recent movie is place on the top)</p>
-    <p>________________________________________________</p>
+    <p>(hint: latest movies are at the top)</p>
+    <p>________________________________________________</p><br>
     <p>+++2022+++</p>
     <a href="page/movies/"></a><br><br>
     <a href="page/movies/minions-rise-of-gru-2022.html">Minions Rise of Gru (1080p + ENGLISH DUB + SUB INDO)</a><br><br>
