update anime kanojo

--- a/anime.html
+++ b/anime.html
@@ -15,6 +15,7 @@
     <a href="index.html">Movies</a>
     <a href="anime.html">Anime</a>
     <p>________________________________________________</p><br>
+    <a href="page/anime/knjormsu-s2.html">Kanojo, Okarishimasu Season 2</a><br><br>
 
 </body>
 </html>
