--- a/anime.html
+++ b/anime.html
@@ -11,11 +11,13 @@
     <!---->
     <h1> <a href="aboutme.html">just click and enjoy!</a> </h1>
     <h3>want to search something? just use CTRL+F or whatever</h3>
-    <p>(hint: latest movies are at the top)</p>
+    <p>(hint: latest anime are at the top)</p>
     <a href="index.html">Movies</a>
     <a href="anime.html">Anime</a>
     <p>________________________________________________</p><br>
-    <a href="page/anime/knjormsu-s2.html">Kanojo, Okarishimasu Season 2</a><br><br>
+    <a href="page/anime/kanojo-karishimasu-s2.html">Kanojo, Okarishimasu Season 2</a><br><br>
+    <a href="page/anime/sorademo-ayumu-wa-yosetekuru.html">Sorademo Ayumu Wa Yosetekuru</a><br><br>
+
 
 </body>
 </html>
