Hataraku Maou-sama Season 2

--- a/anime.html
+++ b/anime.html
@@ -17,7 +17,7 @@
     <p>________________________________________________</p><br>
     <a href="page/anime/kanojo-karishimasu-s2.html">Kanojo, Okarishimasu Season 2</a><br><br>
     <a href="page/anime/sorademo-ayumu-wa-yosetekuru.html">Sorademo Ayumu Wa Yosetekuru</a><br><br>
-
+    <a href="page/anime/hataraku-maou-sama-s2.html">Hataraku Maou-sama Season 2</a><br><br>
 
 </body>
 </html>
