--- a/anime.html
+++ b/anime.html
@@ -15,9 +15,11 @@
     <a href="index.html">Movies</a>
     <a href="anime.html">Anime</a>
     <p>________________________________________________</p><br>
+    <a href="page/anime/kuro-no-shoukanshi.html">Kuro no Shoukanshi</a><br><br>
     <a href="page/anime/kanojo-karishimasu-s2.html">Kanojo, Okarishimasu Season 2</a><br><br>
     <a href="page/anime/sorademo-ayumu-wa-yosetekuru.html">Sorademo Ayumu Wa Yosetekuru</a><br><br>
     <a href="page/anime/hataraku-maou-sama-s2.html">Hataraku Maou-sama Season 2</a><br><br>
+    <a href="page/anime/isekai-meikyuu-de-harem-wo.html">Isekai Meikyuu de Harem wo</a><br><br>
 
 </body>
 </html>
