--- a/anime.html
+++ b/anime.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!---->
-    <h1> <a href="aboutme.html">just click and enjoy!</a> </h1>
+    <h1> <a href="aboutme2.html">just click and enjoy!</a> </h1>
     <h3>want to search something? just use CTRL+F or whatever</h3>
     <p>(hint: latest anime are at the top)</p>
     <a href="index.html">Movies</a>
