--- a/anime.html
+++ b/anime.html
@@ -15,6 +15,7 @@
     <a href="index.html">Movies</a>
     <a href="anime.html">Anime</a>
     <p>________________________________________________</p><br>
+    <!--<a href="page/anime/isekai-yakkyoku.html">Isekai Yakkyoku</a><br><br>-->
     <a href="page/anime/fuuto-tantei.html">Fuuto Tantei</a><br><br>
     <a href="page/anime/kuro-no-shoukanshi.html">Kuro no Shoukanshi</a><br><br>
     <a href="page/anime/kanojo-karishimasu-s2.html">Kanojo, Okarishimasu Season 2</a><br><br>
