create Tensei Kenja no Isekai Life

--- a/anime.html
+++ b/anime.html
@@ -16,6 +16,7 @@
     <a href="anime.html">Anime</a>
     <p>________________________________________________</p><br>
     <!--<a href="page/anime/isekai-yakkyoku.html">Isekai</a><br><br>-->
+    <a href="page/anime/tensei-kenja-no-isekai-life.html">Tensei Kenja no Isekai Life</a><br><br>
     <a href="page/anime/isekai-yakkyoku.html">Isekai Yakkyoku</a><br><br>
     <a href="page/anime/fuuto-tantei.html">Fuuto Tantei</a><br><br>
     <a href="page/anime/kuro-no-shoukanshi.html">Kuro no Shoukanshi</a><br><br>
