--- a/aboutme2.html
+++ b/aboutme2.html
@@ -10,7 +10,8 @@
 <body>
     <p>just some basic information</p><br>
     <p>i built this website (yes it is) with love and pathetic feeling.</p><br>
-    <p>so just use it and don't be spoiled kid</p>
+    <p>you can only download anime with this website.</p><br>
+    <p>so just use it and don't be spoiled kid</p><br>
     
     <a href="anime.html">BACK</a>
 </body>
