--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,8 @@
 <body>
     <p>just some basic information</p><br>
     <p>i built this website (yes it is) with love and pathetic feeling.</p><br>
-    <p>so just use it and don't be spoiled kid</p>
+    <p>you can download and stream movies with this website. </p><br>
+    <p>so just use it and don't be spoiled kid.</p><br>
     
     <a href="index.html">BACK</a>
 </body>
