--- a/aboutme2.html
+++ b/aboutme2.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aBoUt Me</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <p>just some basic information</p><br>
     <p>i built this website (yes it is) with love and pathetic feeling.</p><br>
     <p>you can only download anime with this website.</p><br>
     <p>so just use it and don't be spoiled kid</p><br>
+    <img src="img/goodjobmemes.jpg" alt="goodjobmemes"><br><br><br>
     
     <a href="anime.html">BACK</a>
 </body>
