--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <p>________________________________________________</p><br>
     <p>+++2022+++</p>
     <a href="page/movies/"></a><br><br>
+    <a href="page/movies/the-batman-2022.html">Thor Love And Thunder 2022 Sub Indo (720p)</a><br><br>
     <a href="page/movies/the-batman-2022.html">The Batman 2022 Sub Indo (1080p, 720p)</a><br><br>
     <a href="page/movies/orphan-first-kill.html">Orphan First Kill (1080p, 720p + Sub Indo)</a><br><br>
     <a href="page/movies/minions-rise-of-gru-2022.html">Minions Rise of Gru (1080p + ENGLISH DUB + SUB INDO)</a><br><br>
