--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <a href="index.html">Movies</a>
     <a href="anime.html">Anime</a>
     <p>________________________________________________</p><br>
+    <p>+++2023+++</p>
+    <a href="page/movies/"> </a><br><br>
+    <a href="page/movies/spider-man-across-the-spider-verse.html">Spider-Man Across The Spider-Verse 2023 (720p) </a><br><br>
     <p>+++2022+++</p>
     <a href="page/movies/"></a><br><br>
     <a href="page/movies/thor-love-and-thunder-2022.html">Thor Love And Thunder 2022 Sub Indo (720p)</a><br><br>
