--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!---->
     <h1> <a href="aboutme.html">just click and enjoy!</a> </h1>
     <h3>want to search something? just use CTRL+F or whatever</h3>
-    <p>(hint: latest movies are at the top)</p>
+    <p>(hint: latest update movies are at the top)</p>
     <a href="index.html">Movies</a>
     <a href="anime.html">Anime</a>
     <p>________________________________________________</p><br>
