--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <p>(hint: latest update movies are at the top)</p>
     <a href="index.html">Movies</a>
     <a href="anime.html">Anime</a>
+    <video controls src="magnet:?xt=urn:btih:08ada5a7a6183aae1e09d831df6748d566095a10&dn=Sintel"></video>
+    <script src="https://cdn.jsdelivr.net/npm/@webtor/embed-sdk-js/dist/index.min.js" charset="utf-8" async></script>
     <p>________________________________________________</p><br>
     <p>+++2023+++</p>
     <a href="page/movies/"> </a><br><br>
