--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                 link.click();
                 
                 // Beri tahu user
-                alert('File gambar sedang diunduh. Jika unduhan tidak dimulai otomatis, klik link yang muncul di bawah gambar hasil. atau anda bisa klik kanan dan Save As');
+                alert('File gambar sedang diunduh. Jika unduhan tidak dimulai otomatis, klik link yang muncul di bawah gambar hasil. Atau anda bisa klik kanan dan Save As');
                 
                 // Bersihkan URL objek setelah digunakan
                 setTimeout(() => URL.revokeObjectURL(blobUrl), 60000);
