--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             max-width: 900px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #f5f5f5;
+            background: linear-gradient(135deg, #eef2f3, #dbe9f4);
             color: #333;
         }
         
