--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     </style>
 </head>
 <body>
-    <img src="https://i.postimg.cc/0NrJzWrJ/chibi.png" alt="Chibi Mascot" class="chibi-footer">
+    <img src="https://i.postimg.cc/0NrJzWrJ/chibi.png" alt="Chibi" style="position: fixed; bottom: 10px; right: 10px; width: 120px; z-index: 10;" class="chibi-footer">
     <div class="container">
         <h1><span style="color:#3498db; font-weight:bold;">Waifu3x</span> – JPEG/PNG Image Upscaler</h1>
         
